# Coollab_Webcam

./: .gitignore  CMakeLists.txt
img/: CMakeLists.txt
img/include/img/: img.hpp
img/src/: Image.h  Load.cpp  Load.h  Size.h  SizeU.h
src/: main.cpp  webcam.hpp  webcam.mm
